<resources>
    <string name="app_name">Leaderboard</string>
    <string name="title_activity_leader_board">LeaderBoard</string>
    <string name="learning">Learning Leaders</string>
    <string name="skill">Skill IQ Leaders</string>
    <string name="submit">Submit</string>
    <string name="google_africa"><b>Google</b> Africa \nDeveloper Scholarship</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (Link)</string>
    <string name="subForm">Submit Form</string>
    <string name="submission_successful">Submission Successful</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_sure"><b>Are you sure <b>?</b></b></string>
    <string name="yes">Yes</string>
    <string name="submission_not_successful">Submission not successful</string>
</resources>